added classes script to html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="player-card yellow">3</div>
         </div>
     </div>
-
+    <script src="classes.js"></script>
 </body>
 </html>
 
