--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="player-area">
         <div class="card-row">
             <div class="player-card red" draggable="true">5</div>
-            <div class="player-card blue">1</div>
-            <div class="player-card yellow">8</div>
-            <div class="player-card green">3</div>
-            <div class="player-card red">9</div>
-            <div class="player-card blue">0</div>
-            <div class="player-card yellow">3</div>
+            <div class="player-card blue" draggable="true">1</div>
+            <div class="player-card yellow" draggable="true">8</div>
+            <div class="player-card green" draggable="true">3</div>
+            <div class="player-card red" draggable="true">9</div>
+            <div class="player-card blue" draggable="true">0</div>
+            <div class="player-card yellow" draggable="true">3</div>
         </div>
     </div>
     <script src="classes.js"></script>
